[package]
name = "tui-rain"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tui-rain is a simple widget to generate various rain effects for ratatui"
homepage = "https://github.com/levilutz/tui-rain"
repository = "https://github.com/levilutz/tui-rain"
readme = "README.md"

[dependencies]
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
ratatui = { version = "0.29.0", default-features = false }

[dev-dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.41.1", features = ["full"] }
